--- a/2. Othello/Othello.ipynb
+++ b/2. Othello/Othello.ipynb
@@ -40,7 +40,8 @@
     "<img src='files/img/initial.png'>\n",
     "\n",
     "This representation has two useful properties:\n",
-    "1. Square (m, n) can be accessed as `board[m][n]`. This avoids the need to write functions that convert between square locations and list indexes"
+    "1. Square (m, n) can be accessed as `board[m][n]`. This avoids the need to write functions that convert between square locations and list indexes.\n",
+    "2. Operations involving bounds checking are slightly simpler."
    ]
   },
   {
