--- a/2. Othello/Othello.ipynb
+++ b/2. Othello/Othello.ipynb
@@ -37,6 +37,7 @@
     "\n",
     "We represent the board as a 100-element list, which includes each square on the board as well as the outside edge. Each consecutive sublist of ten elements represents a single row, and each list element stores a piece. An initial board contains four pieces in the center:\n",
     "\n",
+    "```\n",
     "     ? ? ? ? ? ? ? ? ? ?\n",
     "     ? . . . . . . . . ?\n",
     "     ? . . . . . . . . ?\n",
@@ -47,6 +48,7 @@
     "     ? . . . . . . . . ?\n",
     "     ? . . . . . . . . ?\n",
     "     ? ? ? ? ? ? ? ? ? ?\n",
+    "```\n",
     "\n",
     "This representation has two useful properties:\n",
     "1. Square (m, n) can be accessed as `board[m][n]`. This avoids the need to write functions that convert between square locations and list indexes.\n",
@@ -64,6 +66,24 @@
     "EMPTY, BLACK, WHITE, OUTER = '.', '@', 'o', '?'\n",
     "PIECES = (EMPTY, BLACK, WHITE, OUTER)\n",
     "PLAYERS = {BLACK: 'Black', WHITE: 'White'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To refer to neighbor squares we can add a direction to a square."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "UP, DOWN, LEFT, RIGHT = -10, 10, -1, 1\n",
+    "UP_RIGHT, DOWN_RIGHT, DOWN_LEFT, UP_LEFT = -9, 11, 9, -11\n",
+    "DIRECTIONS = (UP, UP_RIGHT, RIGHT, DOWN_RIGHT, DOWN, DOWN_LEFT, LEFT, UP_LEFT)"
    ]
   },
   {
