--- a/2. Othello/Othello.ipynb
+++ b/2. Othello/Othello.ipynb
@@ -333,6 +333,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"localmax\"></a>\n",
+    "\n",
+    "### Local Maximization\n",
+    "\n",
+    "A more sophisticated strategy could look at every available move and evaluate them in some way. This consists of getting a list of legal moves, applying each one to a copy of the board, and choosing the move that results in the \"best\" board."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maximizer(evaluate):\n",
+    "    \"\"\"\n",
+    "    Construct a strategy that chooses the best move by maximizing\n",
+    "    evaluate(player, board) over all boards resulting from legal moves.\n",
+    "    \"\"\"\n",
+    "    def strategy(player, board):\n",
+    "        def score_move(move):\n",
+    "            return evaluate(player, make_move(move, player, list(board)))\n",
+    "        return max(legal_moves(player, board), key=score_move)\n",
+    "    return strategy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One possible evaluation function is `score`. A strategy constructed with `maximizer(score)` will always make the move that results in the largest immediate gain in pieces.\n",
+    "\n",
+    "A more advanced evaluation function might consider the relative worth of each square on the board and weight the score by the value of the pieces held by each player. Since corners and (most) edge squares are very valuable, we could weight those more heavily, and add negative weights to the squares that, if acquired, could lead to the opponent capturing the corners or edges."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SQUARE_WEIGHTS = [\n",
+    "    0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+    "    0, 120, -20,  20,   5,   5,  20, -20, 120,   0,\n",
+    "    0, -20, -40,  -5,  -5,  -5,  -5, -40, -20,   0,\n",
+    "    0,  20,  -5,  15,   3,   3,  15,  -5,  20,   0,\n",
+    "    0,   5,  -5,   3,   3,   3,   3,  -5,   5,   0,\n",
+    "    0,   5,  -5,   3,   3,   3,   3,  -5,   5,   0,\n",
+    "    0,  20,  -5,  15,   3,   3,  15,  -5,  20,   0,\n",
+    "    0, -20, -40,  -5,  -5,  -5,  -5, -40, -20,   0,\n",
+    "    0, 120, -20,  20,   5,   5,  20, -20, 120,   0,\n",
+    "    0,   0,   0,   0,   0,   0,   0,   0,   0,   0\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A strategy constructed as `maximizer(weighted_score)`, then will always return the move that results in the largest immediate \"weighted\" gain in pieces."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weighted_score(player, board):\n",
+    "    \"\"\"\n",
+    "    Compute the difference between the sum of the weights of player's\n",
+    "    squares and the sum of the weights of opponent's squares.\n",
+    "    \"\"\"\n",
+    "    opp = opponent(player)\n",
+    "    total = 0\n",
+    "    for sq in squares():\n",
+    "        if board[sq] == player:\n",
+    "            total += SQUARE_WEIGHTS[sq]\n",
+    "        elif board[sq] == opp:\n",
+    "            total -= SQUARE_WEIGHTS[sq]\n",
+    "    return total"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a greedy strategy however, and will result in a local optimum, as the accepted optimal strategy for Othello is to centralize and maximize mobility (the amount of legal moves available to you) by minimizing your pieces and restricting the opponent's mobility.\n",
+    "\n",
+    "<img src='files/img/greedy.png'>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
