--- a/2. Othello/Othello.ipynb
+++ b/2. Othello/Othello.ipynb
@@ -424,7 +424,9 @@
    "source": [
     "This is a greedy strategy however, and will result in a local optimum, as the accepted optimal strategy for Othello is to centralize and maximize mobility (the amount of legal moves available to you) by minimizing your pieces and restricting the opponent's mobility.\n",
     "\n",
-    "<img src='files/img/greedy.png'>"
+    "<img src='files/img/greedy.png'>\n",
+    "\n",
+    "We could construct an evaluation function `mobility`. A strategy constructed with `maximizer(mobility)` will always make the move that results in the largest gain in mobility."
    ]
   },
   {
