--- a/2. Othello/Othello.ipynb
+++ b/2. Othello/Othello.ipynb
@@ -426,7 +426,23 @@
     "\n",
     "<img src='files/img/greedy.png'>\n",
     "\n",
-    "We could construct an evaluation function `mobility`. A strategy constructed with `maximizer(mobility)` will always make the move that results in the largest gain in mobility."
+    "We could construct an evaluation function `mobility`. A strategy constructed with `maximizer(mobility)` will always make the move that results in the largest immediate gain in mobility."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mobility(player, board):\n",
+    "    \"\"\"\n",
+    "    Compute the difference between the number of legal moves\n",
+    "    of player and the number of legal moves of opponent.\n",
+    "    \"\"\"\n",
+    "    opp = opponent(player)\n",
+    "    score = len(legal_moves(player, board)) - len(legal_moves(opp, board))\n",
+    "    return score"
    ]
   },
   {
