--- a/Othello.ipynb
+++ b/Othello.ipynb
@@ -450,6 +450,8 @@
     "\n",
     "### Minimax search\n",
     "\n",
+    "_\"Preoccupied with a single leaf, you won't see the tree. Preoccupied with a single tree, you'll miss the entire forest.\" - Miyamoto Musashi_\n",
+    "\n",
     "The maximizer strategies are very short-sighted, and a player who can consider the implications of a move several turns in advance could have a significant advantage. We can improve the strategy by searching ahead. Instead of choosing the move that leads immediately to the highest score, we can also consider the opponent's possible replies, our replies to those replies, and so on. By searching through several levels of moves, we can steer away from potential disaster and find good moves that were not immediately apparent.\n",
     "\n",
     "<img src='files/img/minimax.png'>"
